assets/css/style.scss
/* ... */
.story-item {
  .brackets {
    position: relative;
    background-color: white;

    &:hover {
      &:before, &:after {
        transform: scale(1.4);
      }
    }

    &:before, &:after {
      position: absolute;
      content: '';
      font-size: 2em;
      width: 1em;
      background-color: $blue;
      height: 1em;
      z-index: -1;
      display: block;
      transition: transform .3s ease;
    }

    &:before {
      transform-origin: top left;
      top: -0.3em;
      left: -0.3em;
    }

    &:after {
      transform-origin: bottom right;
      bottom: -0.3em;
      right: -0.3em;
    }
  }

  blockquote {
    @extend .blockquote;

    &:before {
      content: '"';
      position: absolute;
      font-size: 2em;
      top: -0.5em;
      left: -0.5em;
      z-index: 1;
    }

    position: relative;
    padding-left: 15px;
  }
}


.bg-panel {
  > * {
    z-index: 1;
  }

  &:after {
    background-color: inherit;
    content: '';
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    width: 100vw;
    height: 100%;
    z-index: 0;
  }
}

/******************************************
    CONTACT FORM SECTION
*******************************************/
.modal-content {
  border: none;
}

.modal-backdrop.show {
  background: linear-gradient(
                  to left,
                  darken(#3dbaf7, 10),
                  darken(#1d3b8b, 10)
  ) !important;
}

.cf-title {
  text-align: center;
  margin-bottom: 3rem;
}

#contactForm {
  input::-webkit-outer-spin-button,
  input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }

  input[type=number] {
    -moz-appearance:textfield;
  }
}
div.contactForm {
  margin: 0;
  padding: 0;
}

div.contactForm .screen-reader-response {
  position: absolute;
  overflow: hidden;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  margin: 0;
  padding: 0;
  border: 0;
}

form.contactForm-form {
  letter-spacing: initial;
  font-weight: initial;
  text-transform: initial;
  font-size: initial;
}

div.contactForm {
  margin: 0;
  padding: 0;
}

form {
  display: block;
  margin-top: 0em;
}

form.contactForm-form input {
  margin-bottom: 1.5rem;
}

.fluid-item {
  display: flex;
  -webkit-align-items: center;
  -moz-align-items: center;
  -ms-align-items: center;
  align-items: center;
}

.fluid-item > *:not(:last-child) {
  margin-right: 1rem;
}

.m-b-10 {
  margin-bottom: 10px;
}

textarea {
  min-height: 100px;
  resize: vertical;
}

div.contactForm-response-output {
  margin: 2em 0.5em 1em;
  padding: 0.2em 1em;
  border: 2px solid #f00;
}

.contactForm-display-none {
  display: none;
}

.btn.btn-wide {
  width: 100%;
}

body:not(.admin) {

  textarea,
  select,
  input[type="date"],
  input[type="datetime"],
  input[type="datetime-local"],
  input[type="email"],
  input[type="month"],
  input[type="number"],
  input[type="password"],
  input[type="search"],
  input[type="tel"],
  input[type="text"],
  input[type="time"],
  input[type="url"],
  input[type="week"] {
    background-color: transparent;
    color: #222;
    box-shadow: none;
    padding: 12px;
    font-size: 16px;
    font-weight: normal;
    width: 100%;
    max-width: 100%;
    outline: none;
    box-sizing: border-box;
    height: 42px;
    border-radius: 0 !important;
    border: none !important;
    border-bottom: 1px solid lighten($dark, 10) !important;

    &:focus,
    &:focus-within,
    &:hover,
    &:active {
      background-color: white;
    }
  }
}

::placeholder {
  color: $gray-800;
}

.dataPrivacyLink {
  text-decoration: underline;
}

/******************************************/

.checkbox {
  width: auto;
  display: inline-block;
  position: relative;
  padding-left: 25px;
  margin-bottom: 13px;
  cursor: pointer;
  font-size: 16px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

/* Hide the browser's default checkbox */
.checkbox input {
  position: absolute;
  opacity: 0;
  left: 0;
  cursor: pointer;
}

.cursor-pointer {
  cursor: pointer;
}

/* Create a custom checkbox */
.checkmark {
  position: absolute;
  top: 4px;
  left: 0;
  height: 15px;
  width: 15px;
  background-color: #eee;
  border-radius: 20%;
}

/* On mouse-over, add a grey background color */
.checkbox:hover input ~ .checkmark {
  background-color: #ccc;
}

/* When the checkbox is checked, add a blue background */
.checkbox input:checked ~ .checkmark {
  background-color: #2196f3;
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
  content: "";
  position: absolute;
  display: none;
}

/* Show the checkmark when checked */
.checkbox input:checked ~ .checkmark:after {
  display: block;
}

/* Style the checkmark/indicator */
.checkbox .checkmark:after {
  left: 5px;
  top: 3px;
  width: 6px;
  height: 6px;
  border: solid white;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

////////////////////////*COURSES TEMPLATE USE THIS*////////////////////////
.hidePlaceholder {
  width: 100px;
  display: inline-block;
}

.icons {
  width: 48px;
  height: 48px;

  .btn {
    transition: background-color $transition ease, color $transition ease;
  }
}

/*timeline*/
.timelineRow {
  padding: 0;
}

.timelineRow:last-child .timelineDiv {
  padding-bottom: 0;
}

.timelineDiv {
  display: flex;
  padding-bottom: 6rem;
  position: relative;
}

.timelineDiv:not(:last-child):before {
  content: "";
  height: 100%;
  width: 4px;
  background: #1d3b8b;
  position: absolute;
  left: 33px;
  top: 0;
}

.timeline {
  width: 70px;
  height: 70px;
  border-radius: 50%;
  background: #1d3b8b;
  color: white;
  font-weight: 600;
  text-align: center;
  line-height: 70px;
  display: block;
  position: relative;
  margin-right: 1.5rem;
}

.successStoryIframe {
  width: 100%;
  border: none;
}

/*************steps to apply***************/

.courseApply {
  display: flex;
  margin-top: 2rem;
}
/* ... */

